# conkdor_bot

./: .env.example  .gitignore  README.md  VM_setup.sh  conkdor_bot.service  conkdor_privacy_policy.md  conkdor_terms_of_service.md  database.db  pyproject.toml
conkdor.venv/: pyvenv.cfg
src/: main.py
src/cogs/: data_commands.py  gathers_commands.py  guild_events.py  hourly_tasks.py  misc_commands.py  utils.py
