[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Conkdor Bot"
version = "0.1"
dependencies = [
    "discord.py==2.7.1",
    "python-dotenv==1.2.2",
    "aiosqlite==0.22.1",
    "matplotlib==3.10.0",
]

requires-python = "==3.10"

[tool.setuptools]
package-dir = {"" = "src"}